Table users {
  id uuid [primary key]
  name varchar [not null]
  email varchar [not null, unique]
  password varchar [not null]
  role varchar
  created_at timestamptz [not null]
}

Table documents {
  id uuid [primary key]
  file_name varchar
  file_extension varchar
  file_type varchar
  file_url varchar
  uploaded_by integer [ref: > users.id]
  uploaded_at timestamptz [not null]
}

Table transactions_business {
  id uuid [primary key]
  document_id uuid [ref: > documents.id]
  invoice_number varchar
  department varchar [not null]
  project_name varchar [not null] 
  transaction_date date [not null]
  vendor varchar [not null]
  amount decimal [not null]
  coa varchar [not null]
  score_ai float
  status varchar
  parse varchar
  created_at timestamptz [not null]
}

Table transaction_business_items {
  id uuid [primary key]
  transaction_business_id uuid [not null, ref: > transactions_business.id]
  item_name varchar [not null]
  item_description text
  quantity decimal
  unit_price decimal
  amount decimal [not null]
  coa varchar
  created_at timestamptz [not null]
}

Table business_ai_confidence {
  id uuid [primary key]
  transaction_id uuid [not null, ref: > transactions_business.id]
  confidence_score float
  confidence_level varchar
  coa_recommendation varchar
  reasoning varchar
  created_at timestamptz [not null]
}

Table bank_statements_list {
  id uuid [primary key]
  document_id uuid [ref: > bank_statement.id]
  remarks varchar
  debit decimal
  credit decimal
  balance decimal
  created_at timestamptz [not null]
}

Table bank_statement{
  id uuid [primary key]
  document_id uuid [ref: > documents.id]
  account_number varchar
  account_name varchar
  opening_balance decimal
  closing_balance decimal
  created_at timestamptz [not null]
}